--- a/index.html
+++ b/index.html
@@ -806,6 +806,14 @@
   <!-- Custom scripts for this template -->
   <script src="js/agency.min.js"></script>
 
+        <script type="module">
+    import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
+    Chatbot.init({
+        chatflowid: "e6f30ba2-cc62-4433-9daa-96f89b165811",
+        apiHost: "https://flowise-1-cwd4.onrender.com",
+    })
+</script>
+
 </body>
 
 </html>
