--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 </head>
 
 <body id="page-top">
-
-        <script type="module">
+<script type="module">
     import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
     Chatbot.init({
-        chatflowid: "e6f30ba2-cc62-4433-9daa-96f89b165811",
-        apiHost: "https://flowise-1-cwd4.onrender.com",
+        chatflowid: "9e8f4d7c-b370-4a2f-8c25-f5ab76df34c7",
+        apiHost: "https://flowise-3-dw53.onrender.com",
     })
+</script>
 </script>
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
