--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
 </head>
 
 <body id="page-top">
+<script type="module">
+    import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
+    Chatbot.init({
+        chatflowid: "8679eae9-ce29-483d-a109-af49828f9d95",
+        apiHost: "https://flowise-3-dw53.onrender.com",
+    })
+</script>
 
 </script>
 </script>
