--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
         chatflowid: "8679eae9-ce29-483d-a109-af49828f9d95",
         apiHost: "https://flowise-3-dw53.onrender.com",
     })
+  footer: {
+                    textColor: '#303235',
+                    text: 'Powered by',
+                    company: 'GeniusKB',
+                    companyLink: 'https://flowiseai.com'
+                }
 </script>
 
 </script>
