--- a/index.html
+++ b/index.html
@@ -28,15 +28,14 @@
 
 <body id="page-top">
 ---------------------------------------
-  <!-- Styl chatbota -->
-<link href="https://cdn.jsdelivr.net/npm/@n8n/chat@latest/dist/style.css" rel="stylesheet" />
 
-<!-- Skrypt chatbota -->
+
+  <link href="https://cdn.jsdelivr.net/npm/@n8n/chat/dist/style.css" rel="stylesheet" />
 <script type="module">
-  import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat@latest/dist/chat.bundle.es.js';
+  import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.es.js';
 
   createChat({
-    webhookUrl: 'https://n8n.leonvanzyl.com/webhook/b5a148be-10d7-4fb4-be47-alaacd112b70/chat'
+    webhookUrl: 'https://n8n.srv849942.hstgr.cloud/webhook/[TWÓJ_ID]/chat'
   });
 </script>
 
