--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 ---------------------------------------
 
 
-  <link href="https://cdn.jsdelivr.net/npm/@n8n/chat/dist/style.css" rel="stylesheet" />
+<link href="https://cdn.jsdelivr.net/npm/@n8n/chat/dist/style.css" rel="stylesheet" />
 <script type="module">
   import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.es.js';
 
   createChat({
-    webhookUrl: 'https://n8n.srv849942.hstgr.cloud/webhook/[TWÓJ_ID]/chat'
+    webhookUrl: 'https://n8n.srv849942.hstgr.cloud/webhook/eEvvVhIrtQFV7Yc5/chat'
   });
 </script>
 
