--- a/index.html
+++ b/index.html
@@ -60,6 +60,54 @@
           </li>
         </ul>
       </div>
+--------------------------------------------------------
+
+
+      <button id="openChatBtn">Otwórz czat</button>
+
+<div id="chatModal" style="display:none; position:fixed; top:0; left:0; right:0; bottom:0; background:rgba(0,0,0,0.5); justify-content:center; align-items:center; z-index:9999;">
+  <div style="width:400px; height:600px; background:white; border-radius:8px; overflow:hidden; position:relative;">
+    <button id="closeBtn" style="position:absolute; top:8px; right:8px; cursor:pointer; font-weight:bold; font-size:18px; background:#ccc; border:none; border-radius:50%; width:30px; height:30px;">&times;</button>
+    <div id="chat"></div>
+  </div>
+</div>
+
+<script type="module">
+  import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.es.js';
+
+  const openBtn = document.getElementById('openChatBtn');
+  const modal = document.getElementById('chatModal');
+  const closeBtn = document.getElementById('closeBtn');
+  const chatDiv = document.getElementById('chat');
+
+  let chatInstance;
+
+  openBtn.addEventListener('click', () => {
+    modal.style.display = 'flex';
+    if (!chatInstance) {
+      chatInstance = createChat({
+        webhookUrl: 'https://n8n.srv849942.hstgr.cloud/webhook/fc7b15a7-090e-44bf-964d-0f7c972f8ccb/chat',
+        container: chatDiv
+      });
+    }
+  });
+
+  closeBtn.addEventListener('click', () => {
+    modal.style.display = 'none';
+  });
+
+  modal.addEventListener('click', (e) => {
+    if (e.target === modal) {
+      modal.style.display = 'none';
+    }
+  });
+</script>
+
+
+-------------------------------------------------------------
+
+
+      
     </div>
   </nav>
 
@@ -811,20 +859,7 @@
   <!-- Custom scripts for this template -->
   <script src="js/agency.min.js"></script>
 
-    ---------------------------------------
-
-
-<link href="https://cdn.jsdelivr.net/npm/@n8n/chat/dist/style.css" rel="stylesheet" />
-<script type="module">
-  import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.es.js';
-
-  createChat({
-    webhookUrl: 'https://n8n.srv849942.hstgr.cloud/webhook/eEvvVhIrtQFV7Yc5/chat'
-  });
-</script>
-
-
-  --------------------------------------------
+   
     
 
 </body>
