--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   <!-- Custom styles for this template -->
   <link href="css/agency.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
-  
+  <link href="https://cdn.jsdelivr.net/npm/@n8n/chat/dist/style.css" rel="stylesheet" />
+
 
 
 </head>
