--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
 <body id="page-top">
 
 
+<script type="module">
+    import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
+    Chatbot.init({
+        chatflowid: "833e1941-381d-49d7-8407-e76737ea5850",
+        apiHost: "https://flowise-9tg6.onrender.com",
+    })
+</script>
+
+
+  
+
 </script>
 </script>
   <!-- Navigation -->
